March 2024 8.7
 - PHP 8.3 compatibility
 - LAM Pro:
  -> Request access: support Windows groups (266)
  -> Request access: usability improvements (278, 279)


18.12.2023 8.6
 - LAM requires PHP 8.0.2 or later
 - Docker: upgrade to Debian 12
 - LAM Pro:
  -> Request access: new module to allow users to request group memberships via self service
  -> Custom scripts: support to specify the subtype of an account
  -> Custom fields: Display groups in server profile as accordion (236)
  -> PPolicy and Shadow cron jobs for password expiration notification: added option to ignore expiration warning time
 - Fixed bugs:
  -> Docker image contains Apache with vulnerabilities (2)


29.09.2023 8.5
  - Multi edit tool: allow attribute placeholders in values
  - Accessibility improvements
  - LAM Pro:
   -> Custom fields: support "\" in date regex for text fields
   -> MIT Kerberos: replaced realm setting in profile editor with user name (e.g. to be able set "$user@LAM.LOCAL")
  - Fixed bugs:
   -> Custom fields: issues when same field name is used in multiple groups, field names are now generated by LAM (235)
   -> Custom scripts: preDelete script causes error message for return code 0 (246)


06.06.2023 8.4
  - Duo 2FA: switch to frameless login and support for universal prompt
  - Docker: support for linux/arm64 (Apple Silicon)
  - Account lists: support account status in table for any account type that supports it (e.g. groups with PPolicy attributes)
  - Windows: allow to set no password expiration via account profile
  - Accessibility improvements
  - LAM Pro:
   -> PPolicy: support to edit existing policies that are not based on "device" (but e.g. on "person")
   -> SMTP server settings: settings can be tested before saving
  - Fixed bugs:
   -> Selecting entries from a filtered list selection did not work (223)
   -> Lamdaemon: support to delete home directories if "rm" command is aliased to "rm -i"