@@ -1,6 +1,7 @@
 March 2024 8.7
  - PHP 8.3 compatibility
  - LAM Pro:
+  -> Cron job to deactivate inactive accounts based on lastBind overlay data (265)
   -> Request access: support Windows groups (266)
   -> Request access: usability improvements (278, 279)
 
